# website

./: .gitignore  .gitmodules  LICENSE  README.md  config.toml
cd/: Cargo.toml
cd/src/: main.rs
content/: 100-olimpiadi-italiane.md  100-scuole-partecipanti.md  101-selezione-scolastica.md  102-procedura-selezione.md  102-selezione-territoriale.md  103-olimpiadi-italiane.md  103-probabili-olimpici.md  104-olimpiadi-italiane.md  105-selezione-territoriale.md  106-selezione-scolastica.md  107-scuole-partecipanti.md  110-iniziative-organizzate-dai-referenti-territoriali.md  111-edizione-20092010.md  112-borse-di-studio-banca-ditalia.md  113-borse-di-studio-banca-ditalia.md  115-regolamento.md  116-circolare.md  118-scuole-partecipanti.md  119-selezione-scolastica.md  120-selezione-territoriale.md  121-circolare.md  121-olimpiadi-italiane.md  122-corso-competenze-digitali.md  122-probabili-olimpici.md  123-probabili-olimpici.md  123-scuole-partecipanti.md  124-olimpiadi-italiane.md  124-selezione-territoriale.md  125-selezione-scolastica.md  125-selezione-territoriale.md  126-olimpiadi-italiane.md  126-selezione-scolastica.md  128-ioi-edizione-2017.md  129-regolamento.md  130-edizione-20112012.md  134-boi-2017.md  138-selezione-scolastica.md  138-selezione-territoriale.md  139-selezione-territoriale.md  141-probabili-olimpici.md  (+464 more)
sass/: style.scss
scripts/: build.sh  download_from_known_url.py  download_gallery_images.py  lib.py  make_deploy_preview.sh  old_gallery_to_new_gallery.sh  update_and_deploy.sh  updated_from_git.py  updated_to_extra.py
static/: lock  unlock  (+3 more)
(+273 files in other folders)
