[package]
name = "website-cd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-file-install = "1.0.1"
axum = "0.7.4"
blake3 = "1.5.0"
clap = { version = "4.4.18", features = ["derive"] }
cmd_lib = "1.9.3"
color-eyre = "0.6.2"
pathdiff = "0.2.1"
reqwest = "0.11.23"
serde = { version = "1.0.196", features = ["derive"] }
tempfile = "3.9.0"
tokio = { version = "1.35.1", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
walkdir = "2.4.0"
