[package]
name = "website-cd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-file-install = "1.0.14"
axum = "0.8.8"
blake3 = "1.8.3"
clap = { version = "4.5.60", features = ["derive"] }
cmd_lib = "2.0.0"
color-eyre = "0.6.5"
pathdiff = "0.2.3"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.26.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
walkdir = "2.5.0"
